--- a/index.html
+++ b/index.html
@@ -7,18 +7,30 @@
   <title>Simple website</title>
   <link rel="stylesheet" href="main.css">
 </head>
-<body>
-    <h1>Faiza's Task List</h1>
-    <p id="msg">Current tasks:</p>
-    <body class="dark-theme">
-    <ul>
-        <li class="list">Add visual styles</li>
-        <li class="list">Add light and dark themes</li>
-        <li>Enable switching the theme</li>
-    </ul>
-    <div>
+<body class = "dark-theme">
+    <p class = "tagline"> Black & Crimson Mode </p>
+    <h1>Faiza's Budget Pal</h1>
+    <p id="msg">Tracking College Expenses, Smarter Not Harder</p>
+<section class="summary">
+    <div class="card">
+        <p class="label">Income</p>
+        <p class= "income total" class = "value">$0.00</p>
+    </div>
+    <div class="card">
+        <p class="label">Expenses</p>
+        <p class= "income total" class = "value">$0.00</p>
+    </div>
+    <div class="card">
+        <p class="label">Balance</p>
+        <p class= "income total" class = "value">$0.00</p>
+    </div>
+</section>
+</body>
+
+
+
   <button class="btn">Dark</button>
-</div>
+
     <script src="app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
 
