--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="card">
         <p class="label">Balance</p>
-        <p class= "income total" class = "value">$0.00</p>
+        <p class= "income final" class = "value">$0.00</p>
     </div>
 </section>
 </body>
