--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 <section class="summary">
     <div class="card">
         <p class="label">Income</p>
-        <p class= "income total" class = "value">$0.00</p>
+        <p class= "incomeTotal" class = "value income">$0.00</p>
     </div>
     <div class="card">
         <p class="label">Expenses</p>
-        <p class= "income total" class = "value">$0.00</p>
+        <p class= "expenseTotal" class = "value expense">$0.00</p>
     </div>
     <div class="card">
         <p class="label">Balance</p>
-        <p class= "income final" class = "value">$0.00</p>
+        <p class= "balanceTotal" class = "value balance">$0.00</p>
     </div>
 </section>
 </body>
