--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
         <p class= "balanceTotal" class = "value balance">$0.00</p>
     </div>
 </section>
+<section class="controls">
+ <input id="nameInput" type="text" placeholder="Description"/>
+ <input id="amtInput" type="number" placeholder="Amount"/>
+ <select id="typeInput">
+    <option value = "expense">Expenses</option>
+    <option value = "income">Income</option>
+ </select>
+ <input id="dateInput" type = "date"/>
+ <button id="addBtn" class="add-btn">Add</button>
+</section>
 </body>
 
 
