--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="brand">
               <span class="logo">💰</span>
             <div>
-    <h1>Faiza's Budget Pal</h1>
+    <h1> My Budget Pal</h1>
     <p class="subtitle">Tracking college expenses — smarter, not harder.</p>
     </div>
 
@@ -52,3 +52,4 @@
 </div>    
 </body>
 </html>
+
